2015-01-31	Juergen Borleis <jbe@pengutronix.de

	* Board Support Package:
		- fix line break
		- add info about Linux version and OSELAS.Toolchain relationship
		- add the Quickstart to the repository

2015-01-26	Juergen Borleis <jbe@pengutronix.de

	* Board Support Package: use ptxdist-2015.01.0
	* Board Support Package: use the new autoversion feature of PTXdist

2014-07-20	Juergen Borleis <jbe@pengutronix.de

	* Board Support Package: use ptxdist-2014.07.0

2014-04-30	Juergen Borleis <jbe@pengutronix.de

	* Board Support Package: Back to development also for the QT config
	* Board Support Package: use ptxdist-2014.04.0 also for the QT config

2014-04-26	Juergen Borleis <jbe@pengutronix.de

	* Board Support Package: use ptxdist-2014.04.0

2014-01-22	Juergen Beisert <jbe@pengutronix.de>

	* Board Support Package: Back to development
	* Board Support Package: use ptxdist-2014.01.0

2013-10-04	Juergen Beisert <jbe@pengutronix.de>

	* Board Support Package: Using platform-FriendlyARM-Mini2440-2013.10.0
	* Board Support Package: Release October 2013 (2013.10.0)

2013-09-24	Juergen Beisert <jbe@pengutronix.de>

	* Board Support Package:
		- use ptxdist-2013.09.0

2013-08-20	Juergen Beisert <jbe@pengutronix.de>

	* Board Support Package:
		- use ptxdist-2013.08.0

2013-08-05	Juergen Beisert <jbe@pengutronix.de>

	* Board Support Package:
		- use ptxdist-2013.07.0

2013-06-12	Juergen Beisert <jbe@pengutronix.de>

	* Board Support Package:
		- use ptxdist-2013.06.0

2013-05-08	Juergen Beisert <jbe@pengutronix.de>

	* Board Support Package: use ptxdist-2013.05.0

2013-01-08	Juergen Beisert <jbe@pengutronix.de>

	* Board Support Package: use ptxdist-2013.01.0

2013-01-04	Juergen Beisert <jbe@pengutronix.de>

	* Board Support Package: Back to development

2012-12-18	Juergen Beisert <jbe@pengutronix.de>

	* Board Support Package: Using platform-FriendlyARM-Mini2440-2012.12.0
	* Board Support Package: Release December 2012 (2012.12.0)
