@@ -11,7 +11,7 @@ Index: linux-3.12/Makefile
  PATCHLEVEL = 12
  SUBLEVEL = 37
 -EXTRAVERSION =
-+EXTRAVERSION = -ptx-master
++EXTRAVERSION = -ptx-2015.01.0
  NAME = One Giant Leap for Frogkind
  
  # *DOCUMENTATION*
