@@ -11,7 +11,7 @@ Index: linux-3.13/Makefile
  PATCHLEVEL = 13
  SUBLEVEL = 11
 -EXTRAVERSION =
-+EXTRAVERSION = -ptx-master
++EXTRAVERSION = -ptx-2015.01.0
  NAME = One Giant Leap for Frogkind
  
  # *DOCUMENTATION*
