@@ -44,23 +44,23 @@ Base System
 [x] qml demo is a release
     [x] rule file uses the release
 [x] bootloader is a release
-[ ] kernel-3.16.7 is a release
-[ ] kernel-3.15.7 is a release
-[ ] kernel-3.14.31 is a release
-[ ] kernel-3.13.11 is a release
-[ ] kernel-3.12.37 is a release
-[ ] kernel-3.11.10 is a release
-[ ] kernel-3.10.38 is a release
+[x] kernel-3.16.7 is a release
+[x] kernel-3.15.7 is a release
+[x] kernel-3.14.31 is a release
+[x] kernel-3.13.11 is a release
+[x] kernel-3.12.37 is a release
+[x] kernel-3.11.10 is a release
+[x] kernel-3.10.38 is a release
 [x] kernel-3.9.11 is a release
 [x] kernel-3.8.13 is a release
 [x] kernel-3.7.10 is a release
 [x] kernel-3.6.11 is a release
 [x] kernel-3.5.7 is a release
-[ ] kernel-3.4.105 is a release
+[x] kernel-3.4.105 is a release
 [x] kernel-3.3.8 is a release
-[ ] kernel-3.2.66 is a release
+[x] kernel-3.2.66 is a release
 [x] kernel-3.1.10 is a release
-[ ] kernel-3.0.101 is a release
+[x] kernel-3.0.101 is a release
 [x] kernel-2.6.39.4 is a release
 [x] kernel-2.6.38.8 is a release
 
@@ -208,5 +208,4 @@ RTC
 Buzzer
 ------
 
-[f] makes noise as expected
-    note: broken in kernel 3.11.x
+[x] makes noise as expected
