@@ -6,6 +6,7 @@
 		- keep in sync with stable release .37
 	* Kernel 3.14:
 		- keep in sync with stable release .31
+	* Platform: Release January 2015 (2015.01.0)
 
 2015-01-26	Juergen Borleis <jbe@pengutronix.de
 
